# ygodata

./: CMakeLists.txt  README.md
binding/: CMakeLists.txt
include/: CardData.h  CardType.h  FormatData.h  Serialize.h
include/data/: CardData.h  CardType.h  FormatData.h  Serialize.h
include/ygo/data/: CardData.h  CardData_C.h  CardType.h  FormatData.h  FormatType.h  Serialize.h
scripts/: generate-data
src/: CardData.cpp  FormatData.cpp  Serialize.cpp
test/: SerializeTest.cpp
xml/: data.xml
